--- a/components/Modal/index.module.scss
+++ b/components/Modal/index.module.scss
@@ -10,6 +10,7 @@
   background-color: rgba(0, 0, 0, 0.2);
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 .Modal {
