--- a/components/StyledContainer/index.module.scss
+++ b/components/StyledContainer/index.module.scss
@@ -4,9 +4,14 @@
   padding: $spacingMedium;
   background-color: $btn-secondary;
   border: 3px solid black;
-  box-shadow: 4px 4px 0 black;
+
+  &.white {
+    background-color: #FFF;
+  }
 
   &.pressable {
+    box-shadow: 4px 4px 0 black;
+
     &.pressed {
       box-shadow: unset;
       transform: translate(4px, 4px);
